# Agam

./: .clang-format  .gitignore  CHANGELOG.md  CMakeLists.txt  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  build.rs
.github/workflows/: ci.yml  deploy-extension.yml  installer.yml  release.yml
docs/: 01_introduction.md  02_installation.md  03_hello_world.md  04_variables.md  05_data_types.md  06_operators.md  07_conditionals.md  08_loops.md  09_functions.md  10_builtins.md  11_lists.md  12_dictionaries.md  13_keywords.md  14_errors.md  15_structs.md  16_enums.md  17_pattern_matching.md  18_error_handling.md  19_modules.md  20_file_io.md  README.md
docs-site/: index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.tsbuildinfo
docs-site/public/docs/: 01_introduction.md  05_data_types.md  07_conditionals.md  09_functions.md  11_lists.md  12_dictionaries.md  13_keywords.md  README.md
docs-site/src/: App.tsx  index.css
docs-site/src/components/: Layout.tsx  MarkdownRenderer.tsx  Navbar.tsx  Sidebar.tsx  mode-toggle.tsx
docs-site/src/components/ui/: button.tsx
docs-site/src/config/: docs.ts
docs-site/src/pages/: DocPage.tsx  Home.tsx
editors/vscode/: package-lock.json  package.json
editors/vscode/src/: extension.ts
editors/vscode/syntaxes/: agam.tmLanguage.json
examples/: complete_test.agam  factorial.agam  fibonacci.agam  game.agam  hello.agam  math_utils.agam  minimal_test.agam  simple_module.agam  simple_test.agam  string_utils.agam  test_advanced.agam  test_builtins.agam  test_imports.agam  types.agam
include/agam/ast/: ast.h  ast_printer.h
include/agam/codegen/: codegen.h  executor.h  optimizer.h
include/agam/hir/: hir.h  hir_builder.h
include/agam/lexer/: lexer.h  tokens.h
include/agam/mir/: mir.h  mir_builder.h  mir_optimizer.h  mir_printer.h
include/agam/parser/: parser.h
include/agam/semantic/: monomorphizer.h  scope_resolver.h  symbol_table.h  type_checker.h
include/agam/thir/: thir.h  thir_builder.h
include/agam/utils/: diagnostic.h  diagnostic_renderer.h
scripts/: bundle.sh  install.bat  install.ps1  install.sh  installer.iss
src/: lib.rs  main.cpp  main.rs
src/ast/: ast.cpp
src/codegen/: codegen.cpp  executor.cpp  optimizer.cpp
src/error/: mod.rs
src/hir/: hir_builder.cpp
src/interpreter/: builtin.rs  evaluator.rs  mod.rs
src/lexer/: lexer.cpp  mod.rs  scanner.rs  token.rs
src/lsp/: main.cpp
src/mir/: mir_builder.cpp  mir_optimizer.cpp  mir_printer.cpp
src/parser/: ast.rs  mod.rs  parser.cpp  parser.rs
src/runtime/: agam_runtime.c
src/semantic/: monomorphizer.cpp  scope_resolver.cpp  symbol_table.cpp  type_checker.cpp
src/thir/: thir_builder.cpp
src/types/: mod.rs  values.rs
src/utils/: diagnostic_renderer.cpp
std/: collections.agam  io.agam  math.agam  os.agam  string.agam  time.agam
tests/: check_all.ps1  check_all.sh  const_test.agam  integration.rs  test_struct.agam  zpm_syntax.agam
tests/benchmarks/: agam_aot  array_bench.agam  array_bench.cpp  array_bench.py  array_bench.rs  array_bench_rs  cpu_bench.agam  cpu_bench.cpp  cpu_bench.py  cpu_bench.rs  cpu_bench_rs  node_alloc.agam  node_alloc.cpp  node_alloc.py  node_alloc.rs  node_alloc_arena.cpp  node_alloc_rs  node_alloc_rust  prime_bench.agam  prime_bench.cpp  prime_bench.py  prime_bench.rs  prime_bench_rs  run_bench.sh
tests/diagnostics/: generic_mismatch_fail.agam  invalid_cast_fail.agam
tests/integration/: main_import.agam  math.agam  sum_range.agam  test_borrow_checker.agam  test_borrow_violation_fail.agam  test_else_if.agam  test_escape_safety_violation_fail.agam  test_ffi.agam  test_generic.agam  test_inherent_impl.agam  test_multiple_generics.agam  test_pipeline.cpp  test_range_for.cpp  test_receiver_safety.agam  test_receiver_violation_fail.agam  test_stdio.agam  test_trait.agam  test_vector.agam  test_vector_int.agam  test_zpm_safety.fail.agam
tests/memory_safety/: leak_return.agam  mutability_hole.fail.agam  receiver_safety_fail.agam  safe_borrows.agam  xor_violation.fail.agam  zpm_safety.fail.agam
tests/mutability/: test_fail.agam  test_field_fail.agam  test_mutability.agam  test_struct_fail.agam
tests/samples/: arithmetic.agam  control_flow.agam  functions.agam  pointers.agam  test_os_time.agam  test_print_ext.agam  test_variadic_print.agam  variables.agam  zpm_test.agam
tests/samples/errors/: type_error.agam  undeclared.agam
tests/unit/: test_codegen.cpp  test_folding.agam  test_hir.cpp  test_lexer.cpp  test_mir.cpp  test_parser.cpp  test_semantic.cpp  test_thir.cpp  test_zone_opt.agam  test_zone_opt_simple.agam
vscode-extension/: LICENSE  README.md  agam-0.1.0.vsix  language-configuration.json  package-lock.json  package.json  tsconfig.json
vscode-extension/snippets/: agam.json
vscode-extension/src/: extension.ts
vscode-extension/syntaxes/: agam.tmLanguage.json
